feat(tag): add high-contrast type (#5910)
* feat(tag): add high-contrast type

* test(tag): update snapshot

* fix(tag): use inverse colors for high-contrast type

Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/components/src/components/tag/_tag.scss
+++ b/packages/components/src/components/tag/_tag.scss
@@ -126,6 +126,14 @@
     );
   }
 
+  .#{$prefix}--tag--high-contrast {
+    @include tag-theme(
+      $inverse-02,
+      $inverse-01,
+      $inverse-hover-ui,
+    );
+  }
+
   .#{$prefix}--tag--disabled,
   .#{$prefix}--tag--filter.#{$prefix}--tag--disabled {
     @include tag-theme($disabled-01, $disabled-02);
