chore(tag) - clean up styles with inheritance (#6013)
* chore(tag) - clean up styles

* minor fix

Co-authored-by: Dusan Milko <dusan.milko@ibm.com>

--- a/packages/components/src/components/tag/_tag.scss
+++ b/packages/components/src/components/tag/_tag.scss
@@ -170,7 +170,12 @@
     border: 0;
     background-color: transparent;
     border-radius: 50%;
+    color: currentColor;
     cursor: pointer;
+
+    svg {
+      fill: currentColor;
+    }
   }
 
   .#{$prefix}--tag__close-icon:focus {
