--- a/packages/components/src/components/tag/_tag.scss
+++ b/packages/components/src/components/tag/_tag.scss
@@ -174,6 +174,10 @@
     }
   }
 
+  .#{$prefix}--tag--disabled .#{$prefix}--tag__close-icon {
+    cursor: not-allowed;
+  }
+
   .#{$prefix}--tag__close-icon:focus {
     outline: none;
     box-shadow: inset 0 0 0 2px $focus;
