fix(progress-indicator): prevent progress step label SVG from shrinking (#6051)
* fix(progress-indicator): prevent progress label SVG from shrinking

* docs(ProgressIndicator): add true prop names to knob labels

--- a/packages/components/src/components/progress-indicator/_progress-indicator.scss
+++ b/packages/components/src/components/progress-indicator/_progress-indicator.scss
@@ -55,6 +55,7 @@
   .#{$prefix}--progress-step svg {
     position: relative;
     z-index: 1;
+    flex-shrink: 0;
     width: $carbon--spacing-05;
     height: $carbon--spacing-05;
     border-radius: 50%;
