feat(FloatingMenu): conditionally set focus in floating menu on menu open (#5489)
* fix(link): specify properties to transition

* chore(settings): document `selectorFocusable`

* feat(navigation): add selectorFocusable string

* feat: add support for selectorPrimaryFocus

* feat(FloatingMenu): set focus in menu body on menu open

* refactor(OverflowMenu): use FloatingMenu initial focus logic

* docs(FloatingMenu): reference correct prop name

* chore: update snapshots

* fix(FloatingMenu): check if active element is within menu body

* fix(FloatingMenu): primaryFocusNode NPE check

* docs: expose selectorPrimaryFocus knobs

* chore(OverflowMenuItem): deprecate `primaryFocus`

* chore: update snapshots

--- a/packages/components/src/components/link/_link.scss
+++ b/packages/components/src/components/link/_link.scss
@@ -27,7 +27,7 @@
     color: $link-01;
     text-decoration: none;
     outline: none;
-    transition: $duration--fast-01 motion(standard, productive);
+    transition: color $duration--fast-01 motion(standard, productive);
 
     &:hover {
       color: $hover-primary-text;
